# ftl-beliefs

./: CLAUDE.md  README.md  beliefs  beliefs.md  nogoods.md  pyproject.toml
.claude/skills/beliefs/: SKILL.md
beliefs_lib/: __init__.py  check_circular.py  check_refs.py  check_stale.py  cli.py  compact.py  contradictions.py  deduplicate.py  nogoods_cmd.py  parser.py  resolve.py
beliefs_lib/data/: SKILL.md
tests/: test_check_stale.py  test_deprecation.py  test_parser.py  test_read_only.py
