[project]
name = "ftl-beliefs"
version = "0.1.0"
description = "CLI tool for tracking claims and contradictions across multi-agent LLM systems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
embeddings = ["fastembed>=0.7.4", "numpy"]

[project.scripts]
beliefs = "beliefs_lib.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beliefs_lib"]
artifacts = ["beliefs_lib/data/*"]
